Fixed rest api [lab-03]
